{
    "name": "InputActionsMaster",
    "maps": [
        {
            "name": "Player",
            "id": "5bf60cd3-4646-4d62-afe8-61fac49f773c",
            "actions": [
                {
                    "name": "ButtonA",
                    "type": "Value",
                    "id": "80033cf8-abff-4a66-b536-2615fefd00fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonB",
                    "type": "Value",
                    "id": "e49d9410-0957-4001-a00e-2eae1453a655",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonDirectional",
                    "type": "Button",
                    "id": "9df6fe33-0459-415e-ad33-d948dd83c772",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonSelect",
                    "type": "Value",
                    "id": "af96df5f-0690-42c3-a0e7-478c3dddc598",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonStart",
                    "type": "Value",
                    "id": "488c0f70-604a-458f-bb0e-77c73089870b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7349bad4-c832-45d0-8c28-b13e68689b02",
                    "path": "<Keyboard>/x",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ed2c6fc-bf68-4ce2-9d54-a49dcf99336b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3bd7194-ae75-4014-99c9-dc6ac6426e70",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a163e87-a010-4421-9bd8-5b07cc9706d1",
                    "path": "<Keyboard>/z",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dpad",
                    "id": "81003661-89c6-4e9b-a91a-5a5c184de66b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonDirectional",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "629d8e7c-a1f3-47fe-b652-dbae51baeda8",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "50ae0167-0db0-4f9a-96dd-1b1fa01b7825",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "d35f274b-3ca5-4594-a9c9-f4d2cfd4c1b4",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "a4f25778-4d24-4a5c-8363-c0327e2f425b",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "30972969-7eeb-44b2-b78f-652afa542824",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonDirectional",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "842830f0-d5a0-4c34-afc4-5e4c59bf4799",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ffc888b9-2b54-4bc6-9d27-6499a3082462",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18479475-548c-4a49-80ff-b0e3d7205621",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fe70dd07-e9fc-462e-8d66-9dd506216672",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonDirectional",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7d119c59-0b31-4867-9577-e5e9323f728a",
                    "path": "<Gamepad>/select",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c60af12a-77fa-450b-968f-ac649e2458ef",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9ce68ce-7a4f-407f-8a76-b8dcb032afa6",
                    "path": "<Gamepad>/start",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad CS",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0106cfe0-5de5-4c9e-b04c-dbb449214e1f",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard CS",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard CS",
            "bindingGroup": "Keyboard CS",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad CS",
            "bindingGroup": "Gamepad CS",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}